<resources>
    <string name="app_name">Weather App 2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_zip">Enter Zip code</string>
    <string name="action_units">units</string>
    <string name="action_7day">7 day forecast</string>
    <string name="action_currentWeather">Current weather</string>
    <string name="action_about">about</string>
    <string name="action_recentZip">Recent zip codes</string>
    <string-array
        name="units">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
</resources>
