<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Main">
    <item android:id="@+id/action_zip" android:title="@string/action_zip"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_recentZip" android:title="@string/action_recentZip"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_currentWeather" android:title="@string/action_currentWeather"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_7day" android:title="@string/action_7day"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_units" android:title="@string/action_units"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
